brainswarm/policies/constraint-template-nonroot.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8scontainermustbenonroot
  annotations:
    description: Requires containers to run as non-root user.
spec:
  crd:
    spec:
      names:
        kind: K8sContainerMustBeNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scontainermustbenonroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container '%s' must not run as root", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsUser
          not input.review.object.spec.securityContext.runAsUser
          msg := sprintf("Container '%s' must specify runAsUser (non-root)", [container.name])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerMustBeNonRoot
metadata:
  name: containers-non-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - brainswarm
